2008-07-12  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Moved the calls of std::ios::exceptions() inside of try-catch block
	because if an error occurred in constructor of std::fstream, then
	exception is thrown immediately when std::ios::exceptions() is called
	which results unhandled exception and aria2c aborts.
	* src/DefaultBtProgressInfoFile.cc
	
2008-07-12  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added the test for the previous change in DefaultBtContext.cc
	* test/DefaultBtContextTest.cc
	
2008-07-12  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the bug that causes infinite loop when the number of pieces are
	fewer than allowed fast set size which is 10 by default.
	* src/DefaultBtContext.cc

2008-07-08  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated the descriptions for -j, -s. Added --bt-seed.
	* doc/aria2c.1
	* doc/aria2c.1.html
	* doc/aria2c.1.txt	
	
2008-07-08  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added --bt-seed option. If --bt-seed=true is given at the command-line,
	aria2 seeds previously downloaded files without validating piece hashs.
	* src/HelpItemFactory.cc
	* src/OptionHandlerFactory.cc
	* src/RequestGroup.cc
	* src/option_processing.cc
	* src/prefs.cc
	* src/prefs.h
	* src/usage_text.h

2008-07-08  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated DESCRIPTION of man page.
	* doc/aria2c.1
	* doc/aria2c.1.html
	* doc/aria2c.1.txt

2008-07-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the compile error on Nexenta OS(GNU/Solaris OS).
	Don't define `struct addrinfo' when __sun is defined.
	* src/getaddrinfo.h 

2008-07-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Introduced a2_struct_stat. It is defined as `struct _stati64' if
	__MINGW32__ is defined, because under MinGW32, _stati64 is used and its
	second argument is of type `struct _stati64'. Otherwise it is defined as
	`struct stat'.
	* src/AbstractDiskWriter.cc
	* src/File.cc
	* src/File.h